# Polkadex

./: Cargo.toml  Dockerfile  build-spec.sh  customSpecRaw.json  delete-everything-docker.sh  docker-compose.yml  download-binaries.sh  start-local-network.sh
bootnode/: Dockerfile
client/offchain-ipfs-client/: Cargo.toml
client/offchain-ipfs-client/src/: lib.rs  tests.rs  worker.rs
infra/: README.md  ansible.cfg  delete-db.yml  deploy-nodes.yml  deploy.sh  nodes.yml  provision-ec2-mumbai.yml  provision-nodes.yml  set-keys.yml  setup.yml  upload-bin-genesis.sh
infra/inventory/: aws_ec2.yml
infra/keygen/: index.js
infra/templates/: node.j2
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
offchain-ipfs-primitives/: Cargo.toml
offchain-ipfs-primitives/src/: lib.rs
pallets/Polkadex_Ido/src/: lib.rs  test.rs
pallets/claim/: Cargo.toml  README.md
pallets/claim/src/: lib.rs  mock.rs  test.rs
pallets/fungible-assets/src/: benchmarking.rs  lib.rs  weights.rs
pallets/ocex/: Cargo.toml
pallets/ocex/src/: benchmarking.rs  lib.rs  weights.rs
pallets/offchain-ipfs/: Cargo.toml
pallets/offchain-ipfs/src/: lib.rs
pallets/pdex-migration/: Cargo.toml
pallets/pdex-migration/src/: benchmarking.rs  lib.rs
pallets/polkapool/src/: benchmarking.rs  lib.rs  weights.rs
pallets/sc-t-ecdsa/: Cargo.toml
pallets/sc-t-ecdsa/src/: gossip.rs  lib.rs  metrics.rs  mpc.rs  mpc_round.rs  round.rs  test.rs  worker.rs
pallets/thea-client/: Cargo.toml
pallets/thea-client/src/: gossip.rs  lib.rs  metrics.rs  mpc_round.rs  round.rs  types.rs  worker.rs
pallets/thea-pallet/: Cargo.toml
pallets/thea-pallet/src/: lib.rs
pallets/thea-primitives/: Cargo.toml
pallets/thea-primitives/src/: lib.rs
pallets/token-faucet/: Cargo.toml
pallets/token-faucet/src/: benchmarking.rs  lib.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs
