[package]
name = "offchain-ipfs-primitives"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
# Polkadex dependencies
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", default-features = false }

sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-application-crypto = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-inherents ={ version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
thiserror = { version = "1.0.26", optional = true }

[dev-dependencies]
hex-literal = "0.3"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-inherents/std",
    "thiserror",
    "polkadex-primitives/std"
]