[package]
edition = '2018'
name = 'pallet-claim'
version = "2.0.1"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version="2.0.0", package="parity-scale-codec", default-features=false, features=["derive"] }
serde = { version="1.0.102", optional=true }
rustc-hex = { version="2.0.1", default-features=false }
frame-support = { git="https://github.com/paritytech/substrate", default-features=false }
frame-system = { git="https://github.com/paritytech/substrate", default-features=false }
sp-std = { git="https://github.com/paritytech/substrate", default-features=false }
sp-io = { git="https://github.com/paritytech/substrate", default-features=false }
sp-runtime = { git="https://github.com/paritytech/substrate", default-features=false }
log = { version="0.4.14", default-features=false }

[dependencies.pallet-balances]
default-features = false
version = "3.0.0"
path = "https://github.com/paritytech/substrate/frame/balances"

[dev-dependencies]
hex-literal = "0.2.1"
pallet-timestamp = { version="3.0.0", path="https://github.com/paritytech/substrate/frame/timestamp" }
codec = { package="parity-scale-codec", version="2.1", default-features=false }
sp-core = { version="3.0.0", default-features=false, path="https://github.com/paritytech/substrate/primitives/core" }
sp-io = { version="3.0.0", default-features=false, path="https://github.com/paritytech/substrate/primitives/io" }
sp-runtime = { version="3.0.0", default-features=false, path="https://github.com/paritytech/substrate/primitives/runtime" }

[features]
default = ['std']
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "log/std",
]
try-runtime = ["frame-support/try-runtime"]
