[package]
name = "offchain-ipfs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
offchain-ipfs-primitives = { path = "../../offchain-ipfs-primitives", default-features = false }
# Polkadex dependencies
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", default-features = false }
# ORML Pallets
orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
# ORML Dependencies
orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "offchain-ipfs-primitives/std",
    "frame-support/std",
    "polkadex-primitives/std",
    "orml-traits/std",
    "orml-tokens/std",
    "orml-currencies/std",
    "pallet-balances/std"
]