[package]
name = "sc-t-ecdsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
parking_lot = "0.11"
thiserror = "1.0"
thea-primitives = { path = "../thea-primitives" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "master" }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }

# Threshold ECDSA
multi-party-ecdsa = { git = "https://github.com/Polkadex-Substrate/multi-party-ecdsa.git" }
curv = {git = "https://github.com/Polkadex-Substrate/curv.git", default-features = false, version = "0.7"}
round-based = { version = "0.1.0", features = [] }
paillier = { git = "https://github.com/Polkadex-Substrate/rust-paillier"}
zk-paillier = { git = "https://github.com/Polkadex-Substrate/zk-paillier"}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
round-based = { version = "0.1.0", features = ["dev"] }