[package]
name = "thea-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
hex = "0.4"
codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
parking_lot = "0.11"
thiserror = "1.0"
thea-primitives = { path = "../thea-primitives" }
sp-application-crypto = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git" }
sc-network-gossip = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git" }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-arithmetic = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }

# Threshold ECDSA
multi-party-ecdsa = { git = "https://github.com/Polkadex-Substrate/multi-party-ecdsa.git" }
curv = { git = "https://github.com/Polkadex-Substrate/curv.git", default-features = false, version = "0.7" }
round-based = { version = "0.1.0", features = [] }
paillier = { git = "https://github.com/Polkadex-Substrate/rust-paillier" }
zk-paillier = { git = "https://github.com/Polkadex-Substrate/zk-paillier" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
round-based = { version = "0.1.0", features = ["dev"] }